--- a/template.html
+++ b/template.html
@@ -23,11 +23,11 @@
           <button
             class="navbar-toggler"
             type="button"
-            data-toggle="collapse"
-            data-target="#navbar"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbar"
             aria-controls="navbar"
             aria-expanded="false"
-            aria-label="toggle navigation"
+            aria-label="Toggle navigation"
           >
             <span class="navbar-toggler-icon"></span>
           </button>
