Navbar shinks on small screen, about page added, careers page added

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
       href="vendor/font-awesome/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Bullseye</title>
+    <title>Bullseye-About</title>
   </head>
   <body>
     <div class="container-fluid p-0">
@@ -36,7 +36,7 @@
             <ul class="navbar-nav text-uppercase mx-auto">
               <li class="nav-item">
                 <a href="index.html" class="nav-link mx-md-1 mx-lg-2 mx-xl-3"
-                  >Home <span class="sr-only">(current)</span></a
+                  >Home</a
                 >
               </li>
               <li class="nav-item">
@@ -80,7 +80,43 @@
       </nav>
       <!-- End of Navigation -->
 
-      <section id="placeholder" class="p-5 m-5"></section>
+      <!--About section-->
+      <section class="bg-light">
+        <img
+          src="img/promo/nick-karvounis-72018.jpg"
+          alt="alternateimage"
+          class="img-fluid"
+        />
+
+        <div class="mx-4 p-3">
+          <h1 class="display-4 mb-0">Our Story</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
+            fugit at odio unde illo pariatur inventore asperiores? Voluptate,
+            iusto quia. Commodi placeat eius aperiam corrupti at. Inventore
+            corrupti rerum impedit?
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
+            fugit at odio unde illo pariatur inventore asperiores? Voluptate,
+            iusto quia. Commodi placeat eius aperiam corrupti at. Inventore
+            corrupti rerum impedit?
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
+            fugit at odio unde illo pariatur inventore asperiores? Voluptate,
+            iusto quia. Commodi placeat eius aperiam corrupti at. Inventore
+            corrupti rerum impedit?
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
+            fugit at odio unde illo pariatur inventore asperiores? Voluptate,
+            iusto quia. Commodi placeat eius aperiam corrupti at. Inventore
+            corrupti rerum impedit?
+          </p>
+        </div>
+      </section>
+      <!--About section ends-->
 
       <footer class="bg-light p-3 pt-5">
         <ul class="list-inline text-uppercase text-center">
