--- a/careers.html
+++ b/careers.html
@@ -10,7 +10,7 @@
       href="vendor/font-awesome/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Bullseye</title>
+    <title>Bullseye-Careers</title>
   </head>
   <body>
     <div class="container-fluid p-0">
@@ -36,7 +36,7 @@
             <ul class="navbar-nav text-uppercase mx-auto">
               <li class="nav-item">
                 <a href="index.html" class="nav-link mx-md-1 mx-lg-2 mx-xl-3"
-                  >Home <span class="sr-only">(current)</span></a
+                  >Home</a
                 >
               </li>
               <li class="nav-item">
@@ -79,16 +79,51 @@
         </div>
       </nav>
       <!-- End of Navigation -->
-
-      <section id="placeholder" class="p-5 m-5"></section>
-
+      <!--Career starts-->
+      <!--Career ends-->
+      <section class="bg-dark text-light text-center">
+        <div class="mx-4 p-3">
+          <h1 class="display-3 my-4">Careers</h1>
+          <div class="aws-wrapper">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+              reprehenderit aliquam magni mollitia adipisci consequatur,
+              officiis sapiente, soluta voluptatem neque, nostrum quibusdam
+              accusantium alias vero unde excepturi dolor ratione itaque?
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+              reprehenderit aliquam magni mollitia adipisci consequatur,
+              officiis sapiente, soluta voluptatem neque, nostrum quibusdam
+              accusantium alias vero unde excepturi dolor ratione itaque?
+            </p>
+          </div>
+          <div class="row justify-content-center my-5 mx-sm-5 mx-md-0">
+            <div class="col-8 col-sm-7 col-md-4 col-lg-3 mb-4">
+              <h4>Team Members</h4>
+              <button class="btn btn-danger btn-block">Apply Here</button>
+            </div>
+            <div class="col-8 col-sm-7 col-md-4 col-lg-3 mb-4">
+              <h4>Managers</h4>
+              <button class="btn btn-danger btn-block">Apply Here</button>
+            </div>
+            <div class="col-8 col-sm-7 col-md-4 col-lg-3 mb-4">
+              <h4>Corporate</h4>
+              <button class="btn btn-danger btn-block">Apply Here</button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--Footer starts-->
       <footer class="bg-light p-3 pt-5">
         <ul class="list-inline text-uppercase text-center">
           <li class="list-inline-item mx-3">
             <a href="about.html" class="text-danger">About</a>
           </li>
           <li class="list-inline-item mx-3">
-            <a href="careers.html" class="text-danger">Careers</a>
+            <a href="careers.html" class="text-danger"
+              >Careers<span class="sr-only">(current)</span></a
+            >
           </li>
           <li class="list-inline-item mx-3">
             <a href="contact.html" class="text-danger">Contact</a>
