--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
           <button
             class="navbar-toggler"
             type="button"
-            data-toggle="collapse"
-            data-target="#navbar"
-            aria-controls="navbar"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
             aria-expanded="false"
             aria-label="toggle navigation"
           >
             <span class="navbar-toggler-icon"></span>
           </button>
 
-          <div class="collapse navbar-collapse" id="navbar">
+          <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav text-uppercase mx-auto">
               <li class="nav-item">
                 <a href="index.html" class="nav-link mx-md-1 mx-lg-2 mx-xl-3"
