Added locations and rewards

--- a/rewards.html
+++ b/rewards.html
@@ -10,7 +10,7 @@
       href="vendor/font-awesome/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Bullseye-Franchising</title>
+    <title>Bullseye</title>
   </head>
   <body>
     <div class="container-fluid p-0">
@@ -36,8 +36,8 @@
             <ul class="navbar-nav text-uppercase mx-auto">
               <li class="nav-item">
                 <a href="index.html" class="nav-link mx-md-1 mx-lg-2 mx-xl-3"
-                  >Home <span class="sr-only">(current)</span></a
-                >
+                  >Home
+                </a>
               </li>
               <li class="nav-item">
                 <a
@@ -66,58 +66,45 @@
               </li>
               <li class="nav-item">
                 <a href="menu.html" class="nav-link mx-md-1 mx-lg-2 mx-xl-3"
-                  >Order</a
+                  >Order</span></a
                 >
               </li>
               <li class="nav-item">
-                <a href="rewards.html" class="nav-link mx-md-1 mx-lg-2 mx-xl-3"
-                  >Rewards</a
-                >
+                <a href="rewards.html" class="nav-link mx-md-1 mx-lg-2 mx-xl-3 active">Rewards <span class="sr-only">(current)</span></a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
       <!-- End of Navigation -->
-      <!--Franchising starts-->
-      <section class="bg-dark text-light">
-        <div class="row no-gutters">
-          <div class="col-lg-6">
-            <img
-              src="img/promo/dan-gold-105699.jpg"
-              alt="Customers Eating Delicious Food"
-              class="img-fluid"
-            />
+      <section class="p-4 pb-5 text-center bg-dark text-light">
+        <div class="display-3 text-uppercase mt-4">
+          <i class="fa fa-bullseye text-danger d-block" aria-hidden="true"></i>
+          Bullseye
+        </div>
+        <h2 class="text-center text-uppercase mt-4">
+          We like to reward our friends
+        </h2>
+        <div class="aw-wrapper">
+          <hr class="aw-hr-long" />
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere
+            impedit nulla voluptate exercitationem repudiandae voluptatibus
+            officia quos illo accusamus maxime sit culpa, fugit ducimus magni
+            harum voluptas voluptates, animi suscipit.
+          </p>
+        </div>
+        <div class="row justify-content-center text-uppercase mt-4">
+          <div class="col-8 col-sm-6 col-md-4 col-lg-3 mb-3">
+            <button class="btn btn-danger btn-block btn-lg">Sign Me Up</button>
           </div>
-          <div class="col-lg-6 p-5">
-            <h1>Franchising</h1>
-            <hr class="aw-hr-long my-2 my-lg-3" />
-            <div>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Error
-                at autem aliquam minus quidem eos! Totam sequi odit quibusdam
-                maiores!
-              </p>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Error
-                at autem aliquam minus quidem eos! Totam sequi odit quibusdam
-                maiores!
-              </p>
-            </div>
-            <div class="row">
-              <div class="col-6">
-                <button class="btn btn-danger btn-block">Domestic</button>
-              </div>
-              <div class="col-6">
-                <button class="btn btn-danger btn-block">International</button>
-              </div>
-            </div>
+          <div class="col-8 col-sm-6 col-md-4 col-lg-3 mb-3">
+            <button class="btn btn-danger btn-block btn-lg">Log In</button>
           </div>
         </div>
       </section>
-      <!--Franchising ends-->
 
-      <!--Footer starts-->
+      <!--Footer starts here-->
       <footer class="bg-light p-3 pt-5">
         <ul class="list-inline text-uppercase text-center">
           <li class="list-inline-item mx-3">
