adding menu template

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav text-uppercase mx-auto">
               <li class="nav-item">
-                <a href="index.html" class="nav-link mx-md-1 mx-lg-2 mx-xl-3"
+                <a
+                  href="index.html"
+                  class="nav-link mx-md-1 mx-lg-2 mx-xl-3 active"
                   >Home <span class="sr-only">(current)</span></a
                 >
               </li>
